versioned_docs/version-2.0/reference/subsystems/scc.mdx
---
title: scc
description: |
  The Succinct Code Counter, aka `scc` (https://github.com/boyter/scc).
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Succinct Code Counter, aka `scc` (https://github.com/boyter/scc).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[scc]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--scc-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_SCC_ARGS'
  toml_repr={`[scc]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to SCC, e.g. `--count-loc-args="--no-cocomo"`. Refer to https://github.com/boyter/scc.

</Option>

## Advanced options

### `known_versions`

<Option
  cli_repr={`--scc-known-versions="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCC_KNOWN_VERSIONS'
  toml_repr={`[scc]
known_versions = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "2.12.0|darwin|70b7002cd1e4541cb37b7b9cbc0eeedd13ceacb49628e82ab46332bb2e65a5a6|1842530",\n  "2.12.0|linux|8eca3e98fe8a78d417d3779a51724515ac4459760d3ec256295f80954a0da044|1753059"\n]`}
>

Known versions to verify downloads against.

Each element is a pipe-separated string of `version|platform|sha256|length`, where:

- `version` is the version string
- `platform` is one of [darwin,linux],
- `sha256` is the 64-character hex representation of the expected sha256
  digest of the download file, as emitted by `shasum -a 256`
- `length` is the expected length of the download file in bytes

E.g., `3.1.2|darwin|6d0f18cd84b918c7b3edd0203e75569e0c7caecb1367bbbe409b44e28514f5be|42813`.

Values are space-stripped, so pipes can be indented for readability if necessary.

</Option>

### `url_platform_mapping`

<Option
  cli_repr={`--scc-url-platform-mapping="{'key1': val1, 'key2': val2, ...}"`}
  env_repr='PANTS_SCC_URL_PLATFORM_MAPPING'
  toml_repr={`[scc.url_platform_mapping]
key1 = val1
key2 = val2
...`}
  default_repr={`{\n  "darwin": "apple-darwin",\n  "linux": "unknown-linux"\n}`}
>

A dictionary mapping platforms to strings to be used when generating the URL to download the tool. In --url-template, anytime the `{platform}` string is used, Pants will determine the current platform, and substitute `{platform}` with the respective value from your dictionary. For example, if you define `{"darwin": "apple-darwin", "linux": "unknown-linux"}, and run Pants on Linux, then `&#123;platform&#125;` will be substituted in the --url-template option with unknown-linux.

</Option>

### `url_template`

<Option
  cli_repr={`--scc-url-template=<str>`}
  env_repr='PANTS_SCC_URL_TEMPLATE'
  toml_repr={`[scc]
url_template = <str>`}
  default_repr={`https://github.com/boyter/scc/releases/download/v{version}/scc-{version}-x86_64-{platform}.zip`}
>

URL to download the tool, either as a single binary file or a compressed file (e.g. zip file). You can change this to point to your own hosted file, e.g. to work with proxies. Use `{version}` to have the value from --version substituted, and `{platform}` to have a value from --url-platform-mapping substituted in, depending on the current platform. For example, https://github.com/.../protoc-&#123;version&#125;-&#123;platform&#125;.zip.

</Option>

### `version`

<Option
  cli_repr={`--scc-version=<str>`}
  env_repr='PANTS_SCC_VERSION'
  toml_repr={`[scc]
version = <str>`}
  default_repr={`2.12.0`}
>

Use this version of succinctcodecounter.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
